// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack environment configuration returns int stack configuration given context=dev 1`] = `
Object {
  "domain": Object {
    "domain": "scaling.cloud",
  },
  "env": Object {
    "account": "096007086684",
    "region": "eu-west-1",
  },
  "network": Object {
    "permittedIps": Array [
      Object {
        "ipAddress": "84.126.215.36/32",
        "name": "Home Office",
      },
    ],
    "vpc": Object {
      "cidr": "10.0.0.0/16",
      "subnets": Array [
        Object {
          "cidrMask": 24,
          "name": "public",
          "subnetType": "Public",
        },
      ],
    },
  },
  "project": "serverless-ecommerce",
  "stage": "dev",
}
`;

exports[`Stack environment configuration returns int stack configuration given context=int 1`] = `
Object {
  "domain": Object {
    "domain": "scaling.cloud",
  },
  "env": Object {
    "account": "096007086684",
    "region": "eu-west-1",
  },
  "network": Object {
    "vpc": Object {
      "cidr": "10.20.0.0/16",
      "subnets": Array [],
    },
  },
  "project": "serverless-ecommerce",
  "stage": "int",
}
`;

exports[`Stack environment configuration returns prod stack configuration given context=prod 1`] = `
Object {
  "domain": Object {
    "domain": "scaling.cloud",
  },
  "env": Object {
    "account": "096007086684",
    "region": "eu-west-1",
  },
  "network": Object {
    "vpc": Object {
      "cidr": "10.40.0.0/16",
      "maxAzs": 2,
      "subnets": Array [],
    },
  },
  "project": "serverless-ecommerce",
  "stage": "prod",
}
`;
